# Omega

./: .gitignore  CMakeLists.txt  PORTAL_DOORWAY_DESIGN.md  PORTAL_ENGINE_PLAN.md  PORTAL_ENGINE_STATUS.md
Demo/: CMakeLists.txt
Demo/Basic/: Basic  CMakeLists.txt  fragment_core.fs  fragment_core.glsl  main.cpp
Demo/Portal/: CMakeLists.txt  main.cpp  portal_scene.json  tunnel_scene.json
Demo/Resources/models/: box.fbx  container.fbx  ground.fbx  gun.fbx  house.fbx  house2.fbx  map1.fbx  mp7.fbx  tank_test.fbx  tank_test2.fbx  tank_test_ani.fbx
Demo/Resources/shaders/: color.fs  core.fs  core_backup.fs  plain.fs  portal.fs
Demo/Resources/textures/: Props_v1.tga  Seafront_v1.tga
Demo/Rooms/: CMakeLists.txt  main.cpp  rooms_scene.json
Demo/Scene/: CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt
Engine/Geometry/Header/: OBox.h  OBoxBase.h  OMath.h  OMatrix.h  OPlane.h  OPoint2.h  OPoint3.h  OPoint4.h  OQuaternion.h  OSphere.h
Engine/Geometry/Source/: OMatrix.cpp  OPoint2.cpp  OPoint3.cpp  OQuaternion.cpp
Engine/Header/: OMath.h  OPlane.h  OPoint3.h  OPoint4.h  OSphere.h
Engine/Render/Header/: OCamera.h  OKeyCodes.h  OShader.h  OSystem.h  OWindow.h
Engine/Render/Source/: OCamera.cpp  OShader.cpp  OSystem.cpp  OWindow.cpp
Engine/Source/: OMatrix.cpp  OPlane.cpp  OPoint2.cpp  OPoint3.cpp
Engine/System/Header/: OGlobal.h  OSystem.h
Engine/System/Source/: OSystem.cpp
Engine/include/: stb_image.h
Engine/include/geometry/: BoundingBox.h  Box.h  BoxBase.h  ComplexObject.h  Entity.h  Matrix.h  Object.h  ObjectTree.h  Plane.h  Point2.h  Point3.h  Point4.h  Portal.h  PortalPair.h  PortalRenderer.h  PortalSurface.h  Quaternion.h  Scene.h  SkyBox.h  Sphere.h  Vertex.h
Engine/include/glad/: gl.h  glad.h
Engine/include/interface/: Entity.h  Light.h  ObjectInterface.h
Engine/include/physics/: PhysicsEngine.h  PhysicsObject.h  PhysicsObjectInput.h
Engine/include/render/: Camera.h  CameraFPS.h  CameraFly.h  CubeTexture.h  DirectionalLight.h  KeyCodes.h  Material.h  OpenGLRender.h  PointLight.h  PortalCamera.h  PortalFramebuffer.h  PortalViewCamera.h  Shader.h  SpotLight.h  Texture.h  Window.h
Engine/include/system/: ByteArray.h  FileSystem.h  Global.h  PhysicsObject.h  System.h  TextureManager.h
Engine/include/utils/: Loader.h  ObjectGenerator.h  PortalSceneFormat.md  PortalSceneLoader.h  utils.h
Engine/src/geometry/: ComplexObject.cpp  Entity.cpp  Matrix.cpp  Object.cpp  ObjectTree.cpp  Plane.cpp  Point2.cpp  Point3.cpp  Portal.cpp  PortalPair.cpp  PortalRenderer.cpp  PortalSurface.cpp  Quaternion.cpp  Scene.cpp  SkyBox.cpp
Engine/src/other/: gl.c  glad.c
Engine/src/physics/: PhysicsEngine.cpp  PhysicsObject.cpp
Engine/src/render/: Camera.cpp  CameraFPS.cpp  CameraFly.cpp  CubeTexture.cpp  DirectionalLight.cpp  OpenGLRender.cpp  PointLight.cpp  PortalCamera.cpp  PortalFramebuffer.cpp  PortalViewCamera.cpp  Shader.cpp  SpotLight.cpp  Texture.cpp  Window.cpp
Engine/src/system/: FileSystem.cpp  System.cpp  TextureManager.cpp
Engine/src/utils/: Loader.cpp  ObjectGenerator.cpp  PortalSceneLoader.cpp
Engine/src/utils/Objects/: Box.cpp  Container.cpp  Dome.cpp  Mesh.cpp  Plane.cpp
Resources/: AK47.blend  Concrete_Barricade.blend  Fantasy.blend  Final_GUN.blend  House_snowy_animated.blend  Military.blend  SCAR.blend  Willow_Tree.blend  big_map.blend  box.blend  bullet_high.blend  cANNON_2.blend  house.blend  house2.blend  mac-10.blend  mp7.blend  scene.blend  stones-blocks.blend  tank_test.blend
